# encoding: utf-8
#
# Editra Launch Plugin
# Author: Cody Precord
# License: wxWindows License
#

#-----------------------------------------------------------------------------#
Version 1.9

+Add Auto Save buffer before running option.
+Ensure that process exit status is output to a new line in the output buffer
+Trap and log XML parsing assertions instead of crashing when invalid Launch
XML is encountered.

#-----------------------------------------------------------------------------#
Version 1.8

+Fix compatibility issue with Python 2.6.4 and later
+Fix some issues with the Lock File feature not always locking the selected file.

#-----------------------------------------------------------------------------#
Version 1.7:

+Fix crash that could occur when clicking on some hotspots where the pattern
matching would return None.
+Add Word Wrap option to output buffer.
+Add Lock File option to control bar to prevent the notebook synchronization from
happening.

#-----------------------------------------------------------------------------#
Version 1.6:

+Fix issue with run list not updating to enabled state properly when saving some
files for the first time.
+Add logging of error messages when run command fails.
+Fix bug in custom xml hotspot handlers.
+Suppress showing command window when running scripts on Windows.

#-----------------------------------------------------------------------------#
Version 1.5:

+New filetype handlers can be added through the new xml interface
+Notification of invalid commands are now properly reported on windows.
+Add support for Stata (patch from Jean Eid)
+Fixed duplicate LaTeX handler in config dialog.

#-----------------------------------------------------------------------------#
Version 1.4:

+Fix handling for files that have spaces in their names.
+Add option to provide audible feedback for when errors are detected.

#-----------------------------------------------------------------------------#
Version 1.3
